k8s/staging/routes.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mnema
  namespace: mnema-staging
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  tls:
    - hosts: [staging.mnema.app]
      secretName: staging-mnema-app-tls
  rules:
    - host: staging.mnema.app
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mnema-frontend
                port:
                  number: 80
          - path: /api/user
            pathType: Prefix
            backend:
              service:
                name: mnema-user
                port:
                  number: 80
          - path: /api/core
            pathType: Prefix
            backend:
              service:
                name: mnema-core
                port:
                  number: 80
          - path: /api/media
            pathType: Prefix
            backend:
              service:
                name: mnema-media
                port:
                  number: 80
          - path: /api/import
            pathType: Prefix
            backend:
              service:
                name: mnema-import
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mnema-auth
  namespace: mnema-staging
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  tls:
    - hosts: [auth.staging.mnema.app]
      secretName: auth-staging-mnema-app-tls
  rules:
    - host: auth.staging.mnema.app
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mnema-auth
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio
  namespace: mnema-staging
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  tls:
    - hosts: [storage.staging.mnema.app]
      secretName: storage-staging-mnema-app-tls
  rules:
    - host: storage.staging.mnema.app
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: minio
                port:
                  number: 9000
